kuma-gateway-api/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuma-demo
  namespace: kuma-demo
  annotations:
    kuma.io/sidecar-injection: enabled
    kuma.io/mesh: default
